--- a/index.html
+++ b/index.html
@@ -90,22 +90,25 @@
         </div>
 
         <!-- Risultati subnetting -->
-        <table class="table mt-2">
-            <thead>
-              <tr>
-                  <th>ID</th>
-                  <th>DIMENSIONE</th>
-                  <th>INDIRIZZO RETE</th>
-                  <th>CIDR</th>
-                  <th>SUBNETMASK</th>
-                  <th>RANGE</th>
-                  <th>BROADCAST</th>
-              </tr>
-            </thead>
-            <tbody id="resultsTableBody">
-                <!-- Risultati inseriti automaticamente dopo il calcolo -->
-            </tbody>
-        </table>
+        <div class="table-responsive">
+            <table class="table mt-2 table-hover">
+                <thead class="thead-dark">
+                    <tr>
+                        <th>ID</th>
+                        <th>DIMENSIONE</th>
+                        <th>INDIRIZZO RETE</th>
+                        <th>CIDR</th>
+                        <th>SUBNETMASK</th>
+                        <th>RANGE</th>
+                        <th>BROADCAST</th>
+                    </tr>
+                </thead>
+                <tbody id="resultsTableBody">
+                    <!-- Risultati inseriti automaticamente dopo il calcolo -->
+                </tbody>
+            </table>
+        </div>
+        
     </div>
 </body>
 </html>
