--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.0.7/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <script src="js/jquery-3.5.1.slim.min.js"></script>
+    <script src="js/popper.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 
 
     <script src="js/VLSM.js" defer></script> <!-- Calcolo VLSM -->
     <script src="js/findPossibleNetworks.js" defer></script> <!-- Calcolo reti possibili da CIDR -->
-    <script src="js/main.js" defer></script> <!-- core app -->  
-    
+    <script src="js/main.js" defer></script> <!-- core app -->
+
+
     <title>HackerInside IPTools</title>
 </head>
 <body>
@@ -72,7 +74,7 @@
 
         <!-- Tab Subnetting Fisso -->
         <div class="tab-pane fade" id="subnetting" role="tabpanel" aria-labelledby="subnetting-tab">
-                <h1>Subnetting Fisso</h1>
+                <h1>Subnetting</h1>
                 <div class="form-group"> <!-- Casella di testo rete iniziale -->
                     <label for="subnettingMajorNetInput">Indirizzo di rete:</label>
                     <input type="text" class="form-control" id="subnettingStMajorNetInput" placeholder="Inserire l'indirizzo di rete" >
