--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-
+    <!-- PWA -->
+    <link rel="manifest" href="manifest.json">
+    <link rel="manifest" href="load.js">
+    <script src="load.js"></script>
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/bootstrap.min.css">
